<resources>
    <!-- Authentification -->
    <string name="app_name">ReBottle</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="login">Connexion</string>
    <string name="email_required">Veuillez saisir votre email</string>
    <string name="password_required">Veuillez saisir votre mot de passe</string>
    <string name="invalid_email_format">Format d\'email invalide</string>
    <string name="login_failed">Échec de connexion: %1$s</string>
    <string name="login_success">Connexion réussie!</string>

    <string name="welcome_message">Welcome, %1$s</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="history">View History</string>



    <string name="menu_home">Accueil</string>
    <string name="action_settings">Paramètres</string>
    <!-- Ajoutez aussi celles-ci si elles sont utilisées ailleurs -->
    <string name="menu_gallery">Galerie</string>
    <string name="menu_slideshow">Diaporama</string>
    <!-- Scanner -->
    <string name="scan_prompt">Scannez le code QR de la machine ReBottle</string>
    <string name="scan_initializing">Initialisation du scanner...</string>
    <string name="scan_result">Code scanné: %1$s</string>
    <string name="rescan">Scanner à nouveau</string>
    <string name="scan_error">Erreur de scan: %1$s</string>
    <!-- Messages d'erreur Firebase -->
    <string name="error_invalid_credentials">Email ou mot de passe incorrect</string>
    <string name="error_user_disabled">Compte désactivé</string>
    <string name="error_too_many_requests">Trop de tentatives. Réessayez plus tard</string>
    <string name="error_network">Problème de connexion réseau</string>

    <!-- Navigation -->
    <string name="title_dashboard">Tableau de bord</string>
    <string name="title_scan">Scanner QR Code</string>
    <string name="title_history">Historique</string>



    <string name="register_here">Pas de compte ? S\'inscrire ici</string>


    <string name="password_length_error">6 caractères minimum</string>
    <string name="name">Nom complet</string>
    <string name="confirm_password">Confirmer le mot de passe</string>
    <string name="register">S\'inscrire</string>
    <string name="already_have_account">Déjà un compte ? Se connecter</string>
    <string name="name_required">Nom requis</string>
    <string name="passwords_not_match">Les mots de passe ne correspondent pas</string>
    <string name="registration_failed">Échec de l\'inscription</string>
</resources>