<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.rebottle.ui.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_loginFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"/>


        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />

    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.rebottle.ui.RegisterFragment"
        android:label="Inscription">

        <action
            android:id="@+id/action_registerFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment" />

        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.rebottle.ui.DashboardFragment">

        <action
            android:id="@+id/action_dashboard_to_qrScanner"
            app:destination="@id/qrScannerFragment" />
        <action
            android:id="@+id/action_dashboard_to_history"
            app:destination="@id/historyFragment" />
    </fragment>
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.rebottle.ui.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/qrScannerFragment"
        android:name="com.example.rebottle.ui.QRScannerFragment"
        android:label="@string/scan_qr"
        tools:layout="@layout/fragment_qr_scanner" />

    <!-- Ajoutez vos autres fragments ici -->
</navigation>